wrapping up, but some minor ui issue 🙃

--- a/src/components/IllustrationPageTemplate/style.css
+++ b/src/components/IllustrationPageTemplate/style.css
@@ -22,12 +22,6 @@
   line-height: 1.6;
 }
 
-/* @media screen and (max-width: 200px) {
-  .no-task-page img {
-    display: none;
-  }
-} */
-
 @media screen and (max-width: 400px) {
   .illustration-page .img-container {
     height: fit-content;
